# ALDIMI_MachineLearning

./: .gitignore  EDA_ALDIMI_Predict_v2_ampliado.ipynb  README.md  baseline_hito2_aldimi.ipynb
ALDIMI_synthetic_dataset_v2_ampliado/: README.md
ALDIMI_synthetic_dataset_v2_ampliado/datos/: consumo_inventario_diario_sintetico.csv  donaciones_sinteticas.csv  inventario_items.csv
codigo/backend/: Cargo.toml  Dockerfile  README.md
codigo/backend/src/: error.rs  inference.rs  main.rs  registry.rs  routes.rs  schema.rs
codigo/ia_models/: README.md  pyproject.toml  requirements.txt
codigo/ia_models/aldimi_models/: __init__.py  config.py  data_loading.py  datagen.py  eda.py  evaluate.py  features.py  onnx_export.py  predict.py  preprocessing.py  real_data.py  train.py
codigo/ia_models/aldimi_models/common/: __init__.py  metrics.py  plots.py
codigo/ia_models/aldimi_models/models/: __init__.py  demanda.py  donaciones.py  estadia.py  prioridad.py  spec.py  stock_critico.py
codigo/ia_models/artifacts/: demanda_consumo.onnx  duracion_estadia.onnx  model_registry.json  prioridad_atencion.onnx  proyeccion_donaciones.onnx  stock_critico_14d.onnx  stock_critico_7d.onnx
codigo/ia_models/tests/: test_data_loading.py  test_datagen.py  test_features.py  test_metrics.py  test_no_leakage.py  test_real_data.py
datos/: DICCIONARIO_DATOS.md  README.md  capturas_ia_sinteticas.csv  consumo_inventario_diario_sintetico.csv  donaciones_sinteticas.csv  pacientes_riesgo_sintetico.csv
docs/: arquitectura.md  informe_final.md  manual_usuario.md  migracion_notebooks.md
(+23 files in other folders)
