[package]
name = "aldimi-backend"
version = "1.0.0"
edition = "2021"
description = "API de inferencia de ALDIMI Predict: sirve los modelos ONNX entrenados en Python"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
tower-http = { version = "0.6", features = ["cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ort = "2.0.0-rc.10"
thiserror = "2"
