[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aldimi-models"
version = "1.0.0"
description = "Pipelines de ML de ALDIMI Predict: EDA, entrenamiento, evaluacion e inferencia"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "scikit-learn",
    "xgboost",
    "matplotlib",
    "skl2onnx",
    "onnxmltools",
    "onnxruntime",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
include = ["aldimi_models*"]
